@@ -63,7 +63,7 @@ DefaultCodeFormatter.name=Default Formatter
 DefaultCodeFormatter.name=Default Formatter
 
 cSourceName=C Source File
-cHeaderName=C/C++ Header File
+cHeaderName=C Header File
 cxxSourceName=C++ Source File
 cxxHeaderName=C++ Header File
-asmHeaderName=Machine Assembly Source File
+asmSourceName=Assembly Source File
